Services/MooMed.Frontend/Kubernetes/base/testPod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hostnames
  name: hostnames
spec:
  selector:
    matchLabels:
      app: hostnames
  replicas: 3
  template:
    metadata:
      labels:
        app: hostnames
    spec:
      containers:
        - name: hostnames
          image: hello-world
      nodeSelector:
        k3s.io/hostname: raspberrypi-87ed4d13
