Services/MooMed.Frontend/Kubernetes/base/MooMed.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: moomedgateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: moomedvservice
spec:
  hosts:
  - "*"
  gateways:
  - moomedgateway
  http:
    - route:
      - destination:
          host: moomed-frontendservice
---
apiVersion: v1
kind: Service
metadata:
  name: moomed-frontendservice
spec:
  selector:
    name: moomed-frontendservice
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moomed-frontendservice
spec:
  replicas: 2
  selector:
    matchLabels:
      name: moomed-frontendservice
  template:
    metadata:
      labels:
        name: moomed-frontendservice
    spec:
      containers:
      - name: moomed-frontendservice
        image: moomed.azurecr.io/frontendservice
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        livenessProbe:
            exec:
              command:
                - curl
                - http://localhost/health/ping
            initialDelaySeconds: 60
            periodSeconds: 10
      imagePullSecrets:
        - name: acrimgpullsecret
