Services/MooMed.Frontend/Kubernetes/base/MooMedFrontendService.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: nginx-ingress
  namespace: default
spec:
  rules:
    - host: moomedlocal.com
      http:
        paths:
          - path: /
            backend:
              serviceName: moomed-frontendservice
              servicePort: 80
  tls:
    - hosts:
        - moomedlocal.com
      secretName: nginxtlscert
  # This section is only required if TLS is to be enabled for the Ingress
  # tls:
  #   - hosts:
  #       - www.example.com
  #     secretName: example-tls
---
apiVersion: v1
kind: Service
metadata:
  name: moomed-frontendservice
spec:
  type: ClusterIP
  selector:
    name: moomed-frontendservice
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moomed-frontendservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: moomed-frontendservice
  template:
    metadata:
      labels:
        name: moomed-frontendservice
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: moomed-frontendservice
          image: moomed.azurecr.io/frontendservice
          imagePullPolicy: Always
          volumeMounts:
            - name: moomedfrontendservicecertmount
              mountPath: "/httpsCert"
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          livenessProbe:
            exec:
              command:
                - curl
                - http://localhost/health/ping
            initialDelaySeconds: 60
            periodSeconds: 10
      volumes:
        - name: moomedfrontendservicecertmount
          secret:
            secretName: moomedfrontendservicecert
      imagePullSecrets:
        - name: acrimgpullsecret
